# cpp-template-repo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  doxygen.yml
docs/: CMakeLists.txt  doxyfile.conf  index.html
docs/assets/doxygen/: header.html
docs/html/: _r_e_a_d_m_e_8md.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  foo_8cpp.html  foo_8cpp__incl.map  foo_8cpp__incl.md5  foo_8h.html  foo_8h__dep__incl.map  foo_8h__dep__incl.md5  foo_8h_source.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: pages_0.js  searchdata.js
examples/: CMakeLists.txt  ex_foo.cpp
src/: CMakeLists.txt  foo.cpp
tests/: CMakeLists.txt
